commit 10.5.1 -> refactor core - dodanie Enum, uproszczenie śmietniku z metodami, potem łatanie IO dodanie Enum i także uproszczenie struktury, poprawki w UI, poprawka w TextMenu